--- a/app/src/main/res/layout/fragment_store_add_seed.xml
+++ b/app/src/main/res/layout/fragment_store_add_seed.xml
@@ -9,8 +9,7 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:orientation="vertical"
-        android:theme="@style/AppTheme"
-        android:background="@color/white">
+        android:background="@drawable/background_custom_dialog">
 
 
 
@@ -19,6 +18,15 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/seed_close"
+                android:layout_width="@dimen/dimen_30dp"
+                android:layout_height="@dimen/dimen_30dp"
+                android:layout_gravity="end"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="@dimen/dimen_10dp"
+                android:src="@drawable/close" />
 
             <LinearLayout
                 android:id="@+id/layout_add_money"
@@ -31,7 +39,8 @@
                     android:layout_height="50dp"
                     android:gravity="center"
                     android:text="@string/seeds"
-                    android:theme="@style/HeaderThemeWhite"/>
+                    android:theme="@style/HeaderThemeWhite"
+                    android:textStyle="bold"/>
 
             </LinearLayout>
 
