landsacpe main dashborad fixes

--- a/app/src/main/res/layout-land/content_dashboard.xml
+++ b/app/src/main/res/layout-land/content_dashboard.xml
@@ -94,7 +94,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="12"
                         android:orientation="vertical"
-                        android:background="@color/colorPrimary"
+                        android:background="@drawable/weather_background"
                         >
 
                         <LinearLayout
@@ -111,7 +111,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="3.5"
                                 android:gravity="center"
-                                android:src="@drawable/ic_service"/>
+                                android:src="@drawable/ic_rain"/>
 
 
                             <TextView
