--- a/app/src/main/res/layout-land/crop_field_list_card.xml
+++ b/app/src/main/res/layout-land/crop_field_list_card.xml
@@ -73,7 +73,7 @@
                         android:layout_height="24dp"
                         android:backgroundTint="@color/black"
                         android:textColor="@color/darker_gray"
-                        app:srcCompat="@drawable/ic_baseline_more_vert" />
+                        android:src="@drawable/ic_baseline_more_vert" />
 
 
                 </LinearLayout>
@@ -209,43 +209,45 @@
 
             </LinearLayout>
                 </LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:orientation="horizontal"
-                    android:gravity="end"
-                    android:padding="0dp"
-                    android:layout_margin="0dp"
-                    android:id="@+id/layout_crop_field_card_show_hide"
-                    android:background="#B6C5B6">
-
-                    <ImageView
-                        android:id="@+id/img_crop_fields_card_show_crops"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:backgroundTint="@color/black"
-                        android:textColor="#D2DDD5"
-                        android:layout_marginRight="18.17dp"
-                        android:layout_marginTop="10dp"
-
-                        app:srcCompat="@drawable/arrow_drop_down" />
-                </LinearLayout>
-                <LinearLayout
-                    android:id="@+id/layout_crop_field_expand"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#B6C5B6"
-                    android:visibility="gone"
-                    android:padding="4dp">
 
 
-                </LinearLayout>
-</LinearLayout>
+<!--<LinearLayout-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:orientation="vertical"-->
+<!--    >-->
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="30dp"-->
+<!--                    android:orientation="horizontal"-->
+<!--                    android:gravity="end"-->
+<!--                    android:padding="0dp"-->
+<!--                    android:layout_margin="0dp"-->
+<!--                    android:id="@+id/layout_crop_field_card_show_hide"-->
+<!--                    android:background="#B6C5B6">-->
+
+<!--                    <ImageView-->
+<!--                        android:id="@+id/img_crop_fields_card_show_crops"-->
+<!--                        android:layout_width="15dp"-->
+<!--                        android:layout_height="15dp"-->
+<!--                        android:backgroundTint="@color/black"-->
+<!--                        android:textColor="#D2DDD5"-->
+<!--                        android:layout_marginRight="18.17dp"-->
+<!--                        android:layout_marginTop="10dp"-->
+
+<!--                        app:srcCompat="@drawable/arrow_drop_down" />-->
+<!--                </LinearLayout>-->
+<!--                <LinearLayout-->
+<!--                    android:id="@+id/layout_crop_field_expand"-->
+<!--                    android:orientation="vertical"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:background="#B6C5B6"-->
+<!--                    android:visibility="gone"-->
+<!--                    android:padding="4dp">-->
+
+
+<!--                </LinearLayout>-->
+<!--</LinearLayout>-->
     </LinearLayout>
 </LinearLayout>
