--- a/app/src/main/res/layout/fragment_store_add_seed.xml
+++ b/app/src/main/res/layout/fragment_store_add_seed.xml
@@ -333,6 +333,7 @@
 
 
                         <EditText
+                            android:id="@+id/txt_crop_manufacturer"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:paddingStart="@dimen/dimen_10dp"
