worked on updating seeds,fertilizers and spray

--- a/app/src/main/res/navigation/farm_records_nav_graph.xml
+++ b/app/src/main/res/navigation/farm_records_nav_graph.xml
@@ -74,6 +74,9 @@
         <action
             android:id="@+id/action_fieldsListFragment_to_addFieldFragment"
             app:destination="@id/addFieldFragment" />
+        <action
+            android:id="@+id/action_fieldsListFragment_to_cropRecordsFragment"
+            app:destination="@id/cropRecordsFragment" />
 
     </fragment>
     <fragment
