--- a/app/src/main/res/layout/content_crop_roistep5.xml
+++ b/app/src/main/res/layout/content_crop_roistep5.xml
@@ -18,26 +18,57 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             >
-            <TextView
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Capital Investment"
-                android:textColor="@color/textColor"
-                android:textSize="18sp"
-                android:textAlignment="center"
-              
-                 />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:layout_margin="4dp"
+                    android:textStyle="bold"
+                    android:text="@string/label_capital_investment"
+                    android:fontFamily="@font/josefin_sans"
+                    android:textColor="@color/textColor"
+                    android:textSize="18sp" />
+
+                <com.kofigyan.stateprogressbar.StateProgressBar
+                    android:id="@+id/revenue_calculator_progress_bar_id"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dimen_20dp"
+                    app:spb_animateToCurrentProgressState="true"
+                    app:spb_checkStateCompleted="true"
+                    app:spb_currentStateDescriptionColor="@color/colorPrimary"
+                    app:spb_currentStateNumber="five"
+                    app:spb_maxStateNumber="five"
+                    app:spb_stateBackgroundColor="#BDBDBD"
+                    app:spb_stateDescriptionColor="#808080"
+                    app:spb_stateForegroundColor="@color/colorPrimary"
+                    app:spb_stateNumberBackgroundColor="#808080"
+                    app:spb_stateNumberForegroundColor="#eeeeee"
+                    app:spb_stateTextSize="@dimen/dimen_16sp" />
+
+
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:layout_marginBottom="@dimen/dimen_20dp"
                 android:gravity="center_vertical">
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_weight="1"
+                    android:layout_weight="0.6"
                     >
                     <TextView
                         android:layout_width="match_parent"
@@ -47,62 +78,90 @@
                         android:textSize="14sp"
                         android:textStyle="normal" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:orientation="horizontal"
-                    android:layout_weight="1"
+                    android:layout_weight="1.4"
+                    android:background="@drawable/edittext_corner"
                     >
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/edittext_left_corners_green"
+                        android:textColor="@color/white"
+                        android:text="UGX"
+                        android:textSize="14sp"
+                        android:gravity="center"
+                        android:layout_weight="0.2" />
                     <EditText
                         android:id="@+id/txt_crop_roi_step_5_machinery_investment"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/input_shapes"
+                        android:layout_width="0dp"
+                        android:layout_weight="0.7"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
                         android:textAlignment="textEnd"
-                        android:inputType="number" 
-                        android:text="0"
+                        android:inputType="number"
                         android:textSize="14sp" />
                 </LinearLayout>
+
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
-                android:gravity="center_vertical"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:layout_marginBottom="@dimen/dimen_20dp"
+                android:weightSum="2"
                 >
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_weight="1"
+                    android:layout_weight="0.6"
                     >
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="Building Investment"
+                        android:text="@string/label_building_investiment"
 
                         android:textColor="@color/textColor"
                         android:textSize="14sp"
                         android:textStyle="normal" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:orientation="horizontal"
-                    android:layout_weight="1"
+                    android:layout_weight="1.4"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/edittext_corner"
                     >
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/edittext_left_corners_green"
+                        android:textColor="@color/white"
+                        android:text="UGX"
+                        android:textSize="14sp"
+                        android:gravity="center"
+                        android:layout_weight="0.2" />
                     <EditText
                         android:id="@+id/txt_crop_roi_step_5_building_investment"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/input_shapes"
+                        android:layout_width="0dp"
+                        android:layout_weight="0.7"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
                         android:textAlignment="textEnd"
-                        android:inputType="number" 
-                        android:text="0"
+                        android:inputType="number"
                         android:textSize="14sp" />
                 </LinearLayout>
+
             </LinearLayout>
 
 
@@ -110,14 +169,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:layout_marginBottom="@dimen/dimen_20dp"
                 android:gravity="center_vertical"
                 >
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_weight="1"
+                    android:layout_weight="0.6"
                     >
                     <TextView
                         android:layout_width="match_parent"
@@ -127,22 +188,36 @@
                         android:textSize="14sp"
                         android:textStyle="normal" />
                 </LinearLayout>
+
+
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:orientation="horizontal"
-                    android:layout_weight="1"
+                    android:layout_weight="1.4"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/edittext_corner"
                     >
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/edittext_left_corners_green"
+                        android:textColor="@color/white"
+                        android:text="UGX"
+                        android:textSize="14sp"
+                        android:gravity="center"
+                        android:layout_weight="0.2" />
                     <EditText
                         android:id="@+id/txt_crop_roi_step_5_land_investment"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="number" 
-                        android:text="0"
-                        android:background="@drawable/input_shapes"
+                        android:layout_width="0dp"
+                        android:layout_weight="0.7"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
                         android:textAlignment="textEnd"
+                        android:inputType="number"
                         android:textSize="14sp" />
                 </LinearLayout>
+
             </LinearLayout>
 
 
@@ -150,15 +225,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
-
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:layout_marginBottom="@dimen/dimen_20dp"
                 android:gravity="center_vertical"
                 >
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_weight="1"
+                    android:layout_weight="0.6"
                     >
                     <TextView
                         android:layout_width="match_parent"
@@ -168,26 +244,37 @@
                         android:textSize="16sp"
                          />
                 </LinearLayout>
+
+
                 <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:orientation="horizontal"
-                    android:layout_weight="1"
-                    android:background="@color/calaculators_total_color"
-                    android:padding="4dp"
+                    android:layout_weight="1.4"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/edittext_corner"
                     >
-
                     <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/edittext_left_corners_green"
+                        android:textColor="@color/white"
+                        android:text="UGX"
+                        android:textSize="14sp"
+                        android:gravity="center"
+                        android:layout_weight="0.2" />
+                    <EditText
                         android:id="@+id/txt_crop_roi_step_4_crop_total_capital_investment"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textAlignment="center"
-                        android:layout_margin="4dp"
-                      
+                        android:layout_width="0dp"
+                        android:layout_weight="0.7"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
+                        android:textAlignment="textEnd"
+                        android:inputType="number"
                         android:textSize="14sp" />
                 </LinearLayout>
+
             </LinearLayout>
-         
 
 
 
@@ -195,48 +282,69 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_margin="8dp"
+                android:layout_margin="@dimen/dimen_20dp"
                 android:gravity="center_vertical"
                 >
-                <LinearLayout
+
+                <FrameLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
-                    >
+                    android:layout_marginEnd="@dimen/dimen_20dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round_corners_button_darkgray">
+
+
                     <Button
                         android:id="@+id/txt_crop_roi_step_5_crop_btn_previous"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:background="@color/transparent"
                         android:text="@string/previous"
-                        android:textAllCaps="false"
-                        style="@style/Button"
-                        android:textColor="@color/whiteColor"
-                        android:drawableLeft="@drawable/arrow_left_white_24dp"
-                        android:textSize="14sp"
-                        android:textStyle="normal" />
-                </LinearLayout>
-                <LinearLayout
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/button_text_size" />
+
+                </FrameLayout>
+
+                <FrameLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:layout_weight="1"
-                    >
+                    android:layout_marginStart="@dimen/dimen_20dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/rounded_corners_button">
+
+
+
                     <Button
                         android:id="@+id/txt_crop_roi_step_5_crop_btn_next"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:background="@color/transparent"
                         android:text="@string/next"
-                        android:textAllCaps="false"
-                        style="@style/Button"
-                        android:textColor="@color/whiteColor"
-                        android:drawableRight="@drawable/arrow_right_white_24dp"
-                        android:textSize="14sp"
-                        android:textStyle="normal" />
-                </LinearLayout>
-               
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/button_text_size" />
+
+                    <ImageView
+                        android:layout_width="30dip"
+                        android:layout_height="30dip"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_margin="10dip"
+                        android:visibility="gone"
+                        android:src="@drawable/ic_right_arrow">
+                    </ImageView>
+                </FrameLayout>
 
             </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
